--- a/20250411_UebungMedizininformatik_v01.ipynb
+++ b/20250411_UebungMedizininformatik_v01.ipynb
@@ -40,15 +40,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T11:32:07.384384Z",
-     "start_time": "2025-04-28T11:32:07.382476Z"
+     "end_time": "2025-04-28T13:25:35.146272Z",
+     "start_time": "2025-04-28T13:25:35.144111Z"
     }
    },
    "cell_type": "code",
-   "source": "# DAS ist eine Code Zeile, die ausgeführt werden kann",
+   "source": "# DAS ist eine Code Zeile, die ausgeführt werden kann. Wenn es geklappt hat, sehen sie einen grünen Haken unten links von der Zeile. Falls nicht, gibt es einen Errorcode.",
    "id": "613e8e774ddba43c",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -65,26 +65,16 @@
     "Dieser Datensatz stammt aus dem Paper:\n",
     "Davide Chicco, Giuseppe Jurman: Machine learning can predict survival of patients with heart failure from serum creatinine and ejection fraction alone. BMC Medical Informatics and Decision Making 20, 16 (2020).\n",
     "\n",
-    "Herz-Kreislauf-Erkrankungen sind weltweit die Todesursache Nr. 1. Menschen, die an einer Herz-Kreislauf-Erkrankung leiden oder ein hohes kardiovaskuläres Risiko aufweisen, müssen frühzeitig erkannt und behandelt werden. Unser Datensatz enthält 274 Patient:innen (jeweils eine Reihe) mit jeweils 12 Merkmalen (Spalten) aus dem Faisalabad Institute of Cardiology am Allied Hospital in Faisalabad (Punjab, Pakistan) von April bis Dezember 2015.\n",
+    "Herz-Kreislauf-Erkrankungen sind weltweit die Todesursache Nr. 1. Menschen, die an einer Herz-Kreislauf-Erkrankung leiden oder ein hohes kardiovaskuläres Risiko aufweisen, müssen frühzeitig erkannt und behandelt werden. Unser Datensatz enthält 274 Patient:innen (jeweils eine Reihe) mit fünf Features (Spalten) aus dem Faisalabad Institute of Cardiology am Allied Hospital in Faisalabad (Punjab, Pakistan) von April bis Dezember 2015.\n",
     "\n",
     "Die letzte Spalte (DEATH_EVENT) zeigt an, ob die Person bis zum Follow-up zwischen 4 und 285 Tagen (Durchschnitt 130 Tage) nach Aufnahme der Werte verstorben ist. Des Weiteren haben wir die folgenden Informationen:\n",
     "\n",
-    "### Binäre Features (0 oder 1):\n",
+    "### Features:\n",
     "- Sex: 0 ist Mann, 1 ist Frau\n",
-    "- High blood pressure: Unveröffentlichtes Kriterium für Bluthochdruck; 1 = ja, 0 = nein\n",
-    "- Anaemia: Hämatokritwert <36 % = 1, sonst 0\n",
-    "- Diabetes-Diagnose: 1 = ja, 0 = nein\n",
-    "- Smoking: 1 = Raucher, 0 = Nichtraucher\n",
-    "\n",
-    "### Numerische Features:\n",
-    "\n",
     "- Age: Alter in Jahren\n",
-    "- Creatinine phosphokinase in mcg/L\n",
     "- Ejection fraction in %\n",
     "- Platelets in Kiloplatelets/mL\n",
     "- Serum creatinine in mg/dL\n",
-    "- Serum sodium in mEq/L\n",
-    "\n",
     "\n",
     "Ziel ist es, anhand der vorhandenen Features vorherzusagen, welche Patient:innen vor dem Follow-up versterben (DEATH_EVENT)."
    ],
@@ -103,8 +93,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T11:34:16.720183Z",
-     "start_time": "2025-04-28T11:34:16.714141Z"
+     "end_time": "2025-04-28T13:31:39.718050Z",
+     "start_time": "2025-04-28T13:31:39.709848Z"
     }
    },
    "cell_type": "code",
@@ -122,26 +112,12 @@
     {
      "data": {
       "text/plain": [
-       "    age  anaemia  creatinine_phosphokinase  diabetes  ejection_fraction  \\\n",
-       "0  75.0        0                       582         0                 20   \n",
-       "1  55.0        0                      7861         0                 38   \n",
-       "2  65.0        0                       146         0                 20   \n",
-       "3  50.0        1                       111         0                 20   \n",
-       "4  65.0        1                       160         1                 20   \n",
-       "\n",
-       "   high_blood_pressure  platelets  serum_creatinine  serum_sodium  sex  \\\n",
-       "0                    1  265000.00               1.9           130    1   \n",
-       "1                    0  263358.03               1.1           136    1   \n",
-       "2                    0  162000.00               1.3           129    1   \n",
-       "3                    0  210000.00               1.9           137    1   \n",
-       "4                    0  327000.00               2.7           116    0   \n",
-       "\n",
-       "   smoking  DEATH_EVENT  \n",
-       "0        0            1  \n",
-       "1        0            1  \n",
-       "2        1            1  \n",
-       "3        0            1  \n",
-       "4        0            1  "
+       "    age  ejection_fraction  platelets  serum_creatinine  sex  DEATH_EVENT\n",
+       "0  75.0                 20  265000.00               1.9    1            1\n",
+       "1  55.0                 38  263358.03               1.1    1            1\n",
+       "2  65.0                 20  162000.00               1.3    1            1\n",
+       "3  50.0                 20  210000.00               1.9    1            1\n",
+       "4  65.0                 20  327000.00               2.7    0            1"
       ],
       "text/html": [
        "<div>\n",
@@ -163,16 +139,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>age</th>\n",
-       "      <th>anaemia</th>\n",
-       "      <th>creatinine_phosphokinase</th>\n",
-       "      <th>diabetes</th>\n",
        "      <th>ejection_fraction</th>\n",
-       "      <th>high_blood_pressure</th>\n",
        "      <th>platelets</th>\n",
        "      <th>serum_creatinine</th>\n",
-       "      <th>serum_sodium</th>\n",
        "      <th>sex</th>\n",
-       "      <th>smoking</th>\n",
        "      <th>DEATH_EVENT</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -180,75 +150,45 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>75.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>582</td>\n",
-       "      <td>0</td>\n",
        "      <td>20</td>\n",
-       "      <td>1</td>\n",
        "      <td>265000.00</td>\n",
        "      <td>1.9</td>\n",
-       "      <td>130</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>55.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7861</td>\n",
-       "      <td>0</td>\n",
        "      <td>38</td>\n",
-       "      <td>0</td>\n",
        "      <td>263358.03</td>\n",
        "      <td>1.1</td>\n",
-       "      <td>136</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>65.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>146</td>\n",
-       "      <td>0</td>\n",
        "      <td>20</td>\n",
-       "      <td>0</td>\n",
        "      <td>162000.00</td>\n",
        "      <td>1.3</td>\n",
-       "      <td>129</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>50.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>111</td>\n",
-       "      <td>0</td>\n",
        "      <td>20</td>\n",
-       "      <td>0</td>\n",
        "      <td>210000.00</td>\n",
        "      <td>1.9</td>\n",
-       "      <td>137</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>65.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>160</td>\n",
-       "      <td>1</td>\n",
        "      <td>20</td>\n",
-       "      <td>0</td>\n",
        "      <td>327000.00</td>\n",
        "      <td>2.7</td>\n",
-       "      <td>116</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -257,12 +197,12 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -276,8 +216,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T11:33:53.549703Z",
-     "start_time": "2025-04-28T11:33:53.505819Z"
+     "end_time": "2025-04-28T13:31:59.131170Z",
+     "start_time": "2025-04-28T13:31:59.077330Z"
     }
    },
    "cell_type": "code",
@@ -303,7 +243,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 12
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -318,8 +258,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T09:30:19.980138Z",
-     "start_time": "2025-04-28T09:30:19.973360Z"
+     "end_time": "2025-04-28T13:32:52.640685Z",
+     "start_time": "2025-04-28T13:32:52.636966Z"
     }
    },
    "cell_type": "code",
@@ -340,15 +280,15 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(1985.0)"
+       "np.float64(95.0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 28
   },
   {
    "metadata": {},
@@ -377,8 +317,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T09:34:37.301070Z",
-     "start_time": "2025-04-28T09:34:35.268650Z"
+     "end_time": "2025-04-28T13:33:47.944109Z",
+     "start_time": "2025-04-28T13:33:47.938340Z"
     }
    },
    "cell_type": "code",
@@ -391,9 +331,7 @@
     "lr = LogisticRegression(solver='liblinear', random_state=42)\n",
     "\n",
     "# Unsere X-Features sind alle Werte, die wir zur Vorhersage nutzen wollen. Wir können auch weniger verwenden.\n",
-    "X = df[['age', 'anaemia', 'creatinine_phosphokinase', 'diabetes',\n",
-    "       'ejection_fraction', 'high_blood_pressure', 'platelets',\n",
-    "       'serum_creatinine', 'serum_sodium', 'sex', 'smoking']]\n",
+    "X = df[['age', 'ejection_fraction', 'platelets', 'serum_creatinine', 'sex']]\n",
     "\n",
     "# Unser y-Wert ist das, was wir vorhersagen wollen\n",
     "y = df['DEATH_EVENT']\n",
@@ -403,13 +341,13 @@
    ],
    "id": "b1bad9b66e4c244a",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T09:34:37.316552Z",
-     "start_time": "2025-04-28T09:34:37.311647Z"
+     "end_time": "2025-04-28T13:33:49.798392Z",
+     "start_time": "2025-04-28T13:33:49.788205Z"
     }
    },
    "cell_type": "code",
@@ -844,18 +782,18 @@
        "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(random_state=42, solver=&#x27;liblinear&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LogisticRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(random_state=42, solver=&#x27;liblinear&#x27;)</pre></div> </div></div></div></div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T09:35:34.627976Z",
-     "start_time": "2025-04-28T09:35:34.583333Z"
+     "end_time": "2025-04-28T13:33:55.833228Z",
+     "start_time": "2025-04-28T13:33:55.776362Z"
     }
    },
    "cell_type": "code",
@@ -884,10 +822,10 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x16881bad0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x11986a000>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -902,7 +840,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 12
+   "execution_count": 34
   }
  ],
  "metadata": {
