Data Set changed

--- a/20250411_UebungMedizininformatik_v01.ipynb
+++ b/20250411_UebungMedizininformatik_v01.ipynb
@@ -72,9 +72,9 @@
     "### Features:\n",
     "- Sex: 0 ist Mann, 1 ist Frau\n",
     "- Age: Alter in Jahren\n",
-    "- Ejection fraction in %\n",
-    "- Platelets in Kiloplatelets/mL\n",
-    "- Serum creatinine in mg/dL\n",
+    "- Ejection fraction: Auswurffraktion in %\n",
+    "- Platelets: Blutplättchen in Kiloplatelets/mL\n",
+    "- Serum creatinine: Kreatinwert in mg/dL\n",
     "\n",
     "Ziel ist es, anhand der vorhandenen Features vorherzusagen, welche Patient:innen vor dem Follow-up versterben (DEATH_EVENT)."
    ],
@@ -798,13 +798,15 @@
    },
    "cell_type": "code",
    "source": [
+    "# Hier laden wir das Package, um uns die Confusion Matrix und alle Metriken anzeigen zu lassen\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay,\n",
+    "\n",
     "# TODO: Ist das ein gutes Vorhersagemodell?\n",
+    "\n",
     "# Jetzt können wir schauen, wie gut das Modell auf den Testdaten performed. Dafür berechnen wir die Accuracy (True Positives + True Negatives) / (#Reihen) und plotten die Confusion Matrix.\n",
     "\n",
     "print('accuracy ist',lr.score(X_test, y_test))\n",
     "\n",
-    "# Hier laden wir das Package, um uns die Confusion Matrix anzeigen zu lassen\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "\n",
     "# Wir geben unser trainiertes Modell \"lr\" sowie unsere Test-Features (X_test) und die korrekten y-Werte (y_test) ein,\n",
     "# um zu prüfen, wie unser Modell auf neuen, bislang ungesehenen Patient:innen performt hätte.\n",
