Simplification and added metrics

--- a/20250411_UebungMedizininformatik_v01.ipynb
+++ b/20250411_UebungMedizininformatik_v01.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-28T11:32:07.376446Z",
-     "start_time": "2025-04-28T11:32:06.151433Z"
+     "end_time": "2025-04-30T07:46:07.949543Z",
+     "start_time": "2025-04-30T07:46:07.947099Z"
     }
    },
    "source": [
@@ -17,7 +17,7 @@
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -25,35 +25,34 @@
    "source": [
     "# Notebook für die Übung Medizininformatik\n",
     "\n",
-    "Dieses Notebook gibt erste Einblicke in die Arbeit mit Daten und Machine Learning. Es wird NICHT erwartet,dass Sie den Code vollständig verstehen, geschweige denn reproduzieren können. Stattdessen sollen Sie ein Gefühl dafür bekommen, wie Daten in Python gehandhabt werden und wie das Trainieren eines Machine-Learning-Modells aussieht.\n",
+    "Dieses Notebook gibt erste Einblicke in die Arbeit mit Daten und Machine Learning. Es wird NICHT erwartet,dass Sie den Code vollständig verstehen, geschweige denn reproduzieren können. Stattdessen sollen Sie einen ersten Eindruck bekommen, wie Datenverarbeitung und Machine Learning in Python funktioniert.\n",
     "\n",
     "### AUFGABE:\n",
-    "Führen Sie den Code Zeile für Zeile aus. Eine bereits ausgeführte Zeile kann den Datensatz verändern und in darauffolgenden Zeilen zu Fehlern führen. Sollte dies bei Ihnen vorkommen, können Sie über „Restart Kernel“ neu starten. Allerdings muss aufgrund diese Abhängigkeiten dann von der ersten Zeile aus alles wieder ausgeführt werden. Sie finden in diesem Notebook Fragen und gelb markierte ToDos, die Sie bitte bearbeiten.\n",
+    "Führen Sie den Code Zeile für Zeile aus in dem Sie die Zeile anklicken und Umstelltaste + Enter oder den grünen Pfeil oben drücken. Eine bereits ausgeführte Zeile kann den Datensatz verändern und in darauffolgenden Zeilen zu Fehlern führen. Sollte dies bei Ihnen vorkommen, können Sie über „Restart Kernel“ neu starten. Allerdings muss aufgrund diese Abhängigkeiten dann von der ersten Zeile aus alles wieder ausgeführt werden. Sie finden in diesem Notebook Fragen und gelb markierte ToDos, die Sie bitte bearbeiten.\n",
+    "Falls nichts mehr geht, einfach das Notebook schließen und über den Link neu öffnen. Dann sind allerdings alle Änderungen verloren.\n",
     "\n",
     "### HINWEIS:\n",
-    "Es sind\n",
-    "Wir geben einige Informationen zum medizinischen Kontext dieser Aufgabe, allerdings ist dies nicht der Fokus dieser Veranstaltung (oder von uns Lehrenden). Außerdem ist heute nur sehr begrenzt Zeit, weshalb wir Sie bitten, sich hier nicht zu lange mit den medizinischen Aspekten dieses Use Cases aufzuhalten, sondern sich auf die technischen Details zu konzentrieren.\n",
-    "Falls nichts mehr geht, einfach das Notebook schließen und über den Link neu öffnen. Dann sind allerdings alle Änderungen verloren."
+    "Wir geben einige Informationen zum medizinischen Kontext dieser Aufgabe, allerdings ist dies nicht der Fokus dieser Veranstaltung (oder von uns Lehrenden). Außerdem ist heute nur sehr begrenzt Zeit, weshalb wir Sie bitten, sich hier nicht zu lange mit den medizinischen Aspekten dieses Use Cases aufzuhalten, sondern sich auf die technischen Details zu konzentrieren.\n"
    ],
    "id": "ab25c699e1d035dc"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T13:25:35.146272Z",
-     "start_time": "2025-04-28T13:25:35.144111Z"
+     "end_time": "2025-04-30T07:46:08.315323Z",
+     "start_time": "2025-04-30T07:46:08.313215Z"
     }
    },
    "cell_type": "code",
-   "source": "# DAS ist eine Code Zeile, die ausgeführt werden kann. Wenn es geklappt hat, sehen sie einen grünen Haken unten links von der Zeile. Falls nicht, gibt es einen Errorcode.",
+   "source": "# DAS ist eine Code Zeile, die ausgeführt werden kann. Während es ausführt sehen Sie eine kleine Uhr, wenn es geklappt hat, sehen sie einen grünen Haken unten links von der Zeile. Falls nicht, gibt es einen Errorcode.",
    "id": "613e8e774ddba43c",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 19
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Das ist eine Text Zeile, die nur gelesen werden.",
+   "source": "Das ist eine Text Zeile, die nur gelesen werden (sie können reinklicken und etwas verändern, das bringt Ihnen aber nichts).",
    "id": "999205f8ce5d086d"
   },
   {
@@ -65,7 +64,9 @@
     "Dieser Datensatz stammt aus dem Paper:\n",
     "Davide Chicco, Giuseppe Jurman: Machine learning can predict survival of patients with heart failure from serum creatinine and ejection fraction alone. BMC Medical Informatics and Decision Making 20, 16 (2020).\n",
     "\n",
-    "Herz-Kreislauf-Erkrankungen sind weltweit die Todesursache Nr. 1. Menschen, die an einer Herz-Kreislauf-Erkrankung leiden oder ein hohes kardiovaskuläres Risiko aufweisen, müssen frühzeitig erkannt und behandelt werden. Unser Datensatz enthält 274 Patient:innen (jeweils eine Reihe) mit fünf Features (Spalten) aus dem Faisalabad Institute of Cardiology am Allied Hospital in Faisalabad (Punjab, Pakistan) von April bis Dezember 2015.\n",
+    "Herz-Kreislauf-Erkrankungen sind weltweit die Todesursache Nr. 1. Menschen, die an einer Herz-Kreislauf-Erkrankung leiden oder ein hohes kardiovaskuläres Risiko aufweisen, müssen frühzeitig erkannt und behandelt werden. Unser Datensatz enthält 274 Patient:innen (jeweils eine Reihe) mit fünf Features (Spalten) aus dem Faisalabad Institute of Cardiology am Allied Hospital in Faisalabad (Pakistan) von April bis Dezember 2015.\n",
+    "\n",
+    "Features sind dabei das Machine Learning Äquivalent zu dem was man in der Statistik als Variablen bezeichnet.\n",
     "\n",
     "Die letzte Spalte (DEATH_EVENT) zeigt an, ob die Person bis zum Follow-up zwischen 4 und 285 Tagen (Durchschnitt 130 Tage) nach Aufnahme der Werte verstorben ist. Des Weiteren haben wir die folgenden Informationen:\n",
     "\n",
@@ -93,8 +94,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T13:31:39.718050Z",
-     "start_time": "2025-04-28T13:31:39.709848Z"
+     "end_time": "2025-04-30T07:46:14.722513Z",
+     "start_time": "2025-04-30T07:46:14.711490Z"
     }
    },
    "cell_type": "code",
@@ -216,8 +217,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T13:31:59.131170Z",
-     "start_time": "2025-04-28T13:31:59.077330Z"
+     "end_time": "2025-04-30T07:46:16.775115Z",
+     "start_time": "2025-04-30T07:46:16.729426Z"
     }
    },
    "cell_type": "code",
@@ -258,8 +259,32 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T13:32:52.640685Z",
-     "start_time": "2025-04-28T13:32:52.636966Z"
+     "end_time": "2025-04-30T07:46:18.796067Z",
+     "start_time": "2025-04-30T07:46:18.792823Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Wir lassen uns den maximalen Wert in der Spalte \"age\" anzeigen (Side note: .min(), .mean() oder .median() funktioniert genauso und .describe() gibt eine deskriptive Übersicht.\n",
+    "print(df['age'].max())"
+   ],
+   "id": "aa04267b99b8460f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1985.0\n"
+     ]
+    }
+   ],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-30T07:46:19.141744Z",
+     "start_time": "2025-04-30T07:46:19.137487Z"
     }
    },
    "cell_type": "code",
@@ -267,28 +292,51 @@
     "#Todo: Ersetzen Sie diesen Wert für die beste Idee, welches Alter dieser Patient hat\n",
     "korrekter_wert = 1985\n",
     "\n",
+    "# Wenn Sie den ersetzt haben, läuft dieser Code durch und korrigiert das Problem.\n",
     "# Diese Code schaut, wo in unserem DataFrame (df) in der Spalte \"age\" der Wert 1985 ist\n",
     "# Für Felder mit dem Wert 1985 ersetzt er diesen Wert mit dem, was wir in korrekter_wert angeben.\n",
     "# Für alle anderen Werte behält er was vorher in der Spalt \"age\" stand.\n",
-    "# Diesen Code nicht ändern, sondern nur die Zahl oben löschen.\n",
     "\n",
     "df.age = np.where(df.age==1985, korrekter_wert, df.age)\n",
-    "df.age.max()"
+    "\n",
+    "# Test: Hier sollte jetzt ein neuer maximaler Wert für Alter angezeigt werden.\n",
+    "print(df.age.max())"
    ],
    "id": "e3be2134b9e6a117",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.float64(95.0)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1985.0\n"
+     ]
     }
    ],
    "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-30T07:46:19.691576Z",
+     "start_time": "2025-04-30T07:46:19.688819Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Wenn Sie ihren Wert sehen wollen, können Sie ihn so abrufen.\n",
+    "print(korrekter_wert)"
+   ],
+   "id": "c8f57e9bfe203b85",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1985\n"
+     ]
+    }
+   ],
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -317,8 +365,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T13:33:47.944109Z",
-     "start_time": "2025-04-28T13:33:47.938340Z"
+     "end_time": "2025-04-30T07:46:21.139698Z",
+     "start_time": "2025-04-30T07:46:21.012986Z"
     }
    },
    "cell_type": "code",
@@ -327,33 +375,33 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Wir laden das Modell und benennen es in \"lr\" um\n",
+    "# Wir laden das Modell und benennen es in \"lr\" um, um damit arbeiten zu können. Der solver und random_state sind technische, hier unwichtige Details.\n",
     "lr = LogisticRegression(solver='liblinear', random_state=42)\n",
     "\n",
-    "# Unsere X-Features sind alle Werte, die wir zur Vorhersage nutzen wollen. Wir können auch weniger verwenden.\n",
+    "# Unsere X-Features sind alle Werte, die wir zur Vorhersage nutzen wollen. Wir können auch weniger verwenden in dem wir einfach den Spaltennamen rauslöschen.\n",
+    "\n",
     "X = df[['age', 'ejection_fraction', 'platelets', 'serum_creatinine', 'sex']]\n",
     "\n",
     "# Unser y-Wert ist das, was wir vorhersagen wollen\n",
     "y = df['DEATH_EVENT']\n",
     "\n",
-    "# Wir teilen unsere Daten in 80 % Trainings- und 20 % Testdaten\n",
+    "# Wir teilen unsere Daten in 80 % Trainings- und 20 % Testdaten.\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)"
    ],
    "id": "b1bad9b66e4c244a",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T13:33:49.798392Z",
-     "start_time": "2025-04-28T13:33:49.788205Z"
+     "end_time": "2025-04-30T07:46:22.519114Z",
+     "start_time": "2025-04-30T07:46:22.508928Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Beim \"fit\" berechnet das Modell, welche Funktion sich am besten an die Trainingsdaten anpasst\n",
-    "\n",
+    "# Beim \"fit\" berechnet das Modell, welche Funktion sich am besten an die Trainingsdaten anpasst.\n",
     "lr.fit(X_train, y_train)"
    ],
    "id": "20cfada531aaf553",
@@ -782,35 +830,41 @@
        "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(random_state=42, solver=&#x27;liblinear&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LogisticRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(random_state=42, solver=&#x27;liblinear&#x27;)</pre></div> </div></div></div></div>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 32
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T13:33:55.833228Z",
-     "start_time": "2025-04-28T13:33:55.776362Z"
+     "end_time": "2025-04-30T07:46:23.935529Z",
+     "start_time": "2025-04-30T07:46:23.882360Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Hier laden wir das Package, um uns die Confusion Matrix und alle Metriken anzeigen zu lassen\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay,\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay, confusion_matrix\n",
     "\n",
-    "# TODO: Ist das ein gutes Vorhersagemodell?\n",
+    "# Jetzt können wir schauen, wie gut das Modell auf den Testdaten performed. Dafür\n",
+    "#\n",
+    "# 1. Sagen wir DEATH_EVENT für die Testpatient:innen voraus\n",
+    "y_pred = lr.predict(X_test)\n",
     "\n",
-    "# Jetzt können wir schauen, wie gut das Modell auf den Testdaten performed. Dafür berechnen wir die Accuracy (True Positives + True Negatives) / (#Reihen) und plotten die Confusion Matrix.\n",
+    "# 2. berechnen und plotten die Confusion Matrix und definieren daraus die TP, FP, FN, TN, wo jeweils T = True, F = False, P = Positive (Verstorben), N = Negative (nicht verstorben) ist.\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()\n",
+    "ConfusionMatrixDisplay.from_estimator(lr, X_test, y_test, cmap='Blues')\n",
     "\n",
-    "print('accuracy ist',lr.score(X_test, y_test))\n",
+    "# 3. Berechnent mit diesen Werten alle gewollten Metriken.\n",
+    "# accuracy (True Positives + True Negatives) / (#Reihen)\n",
+    "print('Accuracy:', (tp + tn) / (tp + tn + fp + fn))\n",
+    "print('Sensitivität/ Recall', (tp) / (tp + fn))\n",
+    "print('Spezifität', (tn) / (tn + fp))\n",
     "\n",
-    "\n",
-    "# Wir geben unser trainiertes Modell \"lr\" sowie unsere Test-Features (X_test) und die korrekten y-Werte (y_test) ein,\n",
-    "# um zu prüfen, wie unser Modell auf neuen, bislang ungesehenen Patient:innen performt hätte.\n",
-    "ConfusionMatrixDisplay.from_estimator(lr, X_test, y_test, cmap='Blues')"
+    "# TODO: Ist das ein gutes Vorhersagemodell?"
    ],
    "id": "ca1f7af5c0ebc3df",
    "outputs": [
@@ -818,18 +872,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy ist 0.782608695652174\n"
+      "Accuracy: 0.782608695652174\n",
+      "Sensitivität/ Recall 0.0\n",
+      "Spezifität 1.0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x11986a000>"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -842,7 +888,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 34
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-30T07:46:25.236314Z",
+     "start_time": "2025-04-30T07:46:25.234092Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "e9ec17beb7e87708",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
