Move pacakges and add descriptives

--- a/20250411_UebungMedizininformatik_v01.ipynb
+++ b/20250411_UebungMedizininformatik_v01.ipynb
@@ -1,25 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-04-30T07:46:07.949543Z",
-     "start_time": "2025-04-30T07:46:07.947099Z"
-    }
-   },
-   "source": [
-    "# Diese Zeile importiert sogenannte Packages, die es uns erlauben, auf von anderen geschriebenen Code zuzugreifen.\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ],
-   "outputs": [],
-   "execution_count": 18
-  },
-  {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
@@ -94,8 +75,26 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-30T07:46:14.722513Z",
-     "start_time": "2025-04-30T07:46:14.711490Z"
+     "end_time": "2025-05-06T07:18:26.330367Z",
+     "start_time": "2025-05-06T07:18:25.635018Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Diese Zeile importiert sogenannte Packages, die es uns erlauben, auf von anderen geschriebenen Code zuzugreifen.\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ],
+   "id": "initial_id",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-06T07:18:27.584003Z",
+     "start_time": "2025-05-06T07:18:27.568741Z"
     }
    },
    "cell_type": "code",
@@ -198,12 +197,12 @@
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -217,13 +216,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-30T07:46:16.775115Z",
-     "start_time": "2025-04-30T07:46:16.729426Z"
+     "end_time": "2025-05-06T07:18:31.354819Z",
+     "start_time": "2025-05-06T07:18:31.284934Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Todo: Schauen Sie sich die Histogramme an und ersetzen Sie den Spaltennamen hinter column durch andere numerische Variablen, für die ein Histogramm spannend sein könnte.\n",
+    "# Todo: Schauen Sie sich die Histogramme an und ersetzen Sie den Spaltennamen unten in dieser Zeile, da wo column = stejt durch andere numerische Variablen, für die ein Histogramm spannend sein könnte.\n",
     "# Hinweis: Bei Python müssen Texte immer in \"\" angegeben werden. Ohne \"\" handelt es sich um den Namen einer Variablen oder Ähnliches. Schreiben Sie die Antwort also zum Beispiel als \"age\" und nicht age.\n",
     "\n",
     "column = \"platelets\"\n",
@@ -244,7 +243,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 26
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -259,8 +258,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-30T07:46:18.796067Z",
-     "start_time": "2025-04-30T07:46:18.792823Z"
+     "end_time": "2025-05-06T07:18:34.791584Z",
+     "start_time": "2025-05-06T07:18:34.787695Z"
     }
    },
    "cell_type": "code",
@@ -278,18 +277,18 @@
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-30T07:46:19.141744Z",
-     "start_time": "2025-04-30T07:46:19.137487Z"
+     "end_time": "2025-05-06T07:18:59.205929Z",
+     "start_time": "2025-05-06T07:18:59.202419Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "#Todo: Ersetzen Sie diesen Wert für die beste Idee, welches Alter dieser Patient hat\n",
+    "#Todo: Ersetzen Sie in disere Zeile die 1985 für die beste Idee, welches Alter dieser Patient hat.\n",
     "korrekter_wert = 1985\n",
     "\n",
     "# Wenn Sie den ersetzt haben, läuft dieser Code durch und korrigiert das Problem.\n",
@@ -312,13 +311,13 @@
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-30T07:46:19.691576Z",
-     "start_time": "2025-04-30T07:46:19.688819Z"
+     "end_time": "2025-05-06T07:19:00.527773Z",
+     "start_time": "2025-05-06T07:19:00.525409Z"
     }
    },
    "cell_type": "code",
@@ -336,7 +335,7 @@
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -365,8 +364,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-30T07:46:21.139698Z",
-     "start_time": "2025-04-30T07:46:21.012986Z"
+     "end_time": "2025-05-06T07:19:04.970335Z",
+     "start_time": "2025-05-06T07:19:03.818816Z"
     }
    },
    "cell_type": "code",
@@ -390,7 +389,7 @@
    ],
    "id": "b1bad9b66e4c244a",
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 9
   },
   {
    "metadata": {
